fix: entity id synchronization by scoping to individual workers