@@ -47,7 +47,7 @@ public class YsmMapperPayloadManager {
     private final Map<InetSocketAddress, Integer> backend2Players = Maps.newLinkedHashMap();
     private final Set<UUID> ysmInstalledPlayers = Sets.newConcurrentHashSet();
 
-    private final Map<Integer, Integer> worker2PlayerEntityIdCache = Maps.newConcurrentMap();
+    private final Map<InetSocketAddress, Map<Integer, Integer>> worker2PlayerEntityIdCache = Maps.newConcurrentMap();
 
     public YsmMapperPayloadManager(Function<Player, YsmPacketProxy> packetProxyCreator,
             Function<UUID, YsmPacketProxy> packetProxyCreatorVirtual) {
@@ -75,8 +75,11 @@ public class YsmMapperPayloadManager {
         mapper.getPacketProxy().setPlayerWorkerEntityId(entityId);
 
         final int playerEntityId = mapper.getPacketProxy().getPlayerEntityId();
-        if (playerEntityId != -1) {
-            this.worker2PlayerEntityIdCache.put(entityId, playerEntityId);
+        final InetSocketAddress remoteAddress = mapper.getRemoteAddress();
+
+        if (playerEntityId != -1 && remoteAddress != null) {
+            this.worker2PlayerEntityIdCache.computeIfAbsent(remoteAddress, k -> Maps.newConcurrentMap())
+                    .put(entityId, playerEntityId);
         }
     }
 
@@ -90,8 +93,11 @@ public class YsmMapperPayloadManager {
         mapper.getPacketProxy().setPlayerEntityId(entityId);
 
         final int workerEntityId = mapper.getPacketProxy().getPlayerWorkerEntityId();
-        if (workerEntityId != -1) {
-            this.worker2PlayerEntityIdCache.put(workerEntityId, entityId);
+        final InetSocketAddress remoteAddress = mapper.getRemoteAddress();
+
+        if (workerEntityId != -1 && remoteAddress != null) {
+            this.worker2PlayerEntityIdCache.computeIfAbsent(remoteAddress, k -> Maps.newConcurrentMap())
+                    .put(workerEntityId, entityId);
         }
     }
 
@@ -244,8 +250,8 @@ public class YsmMapperPayloadManager {
         connection.destroyAndAwaitDisconnected();
     }
 
-    public Map<Integer, Integer> collectRealProxy2WorkerEntityId() {
-        return Collections.unmodifiableMap(this.worker2PlayerEntityIdCache);
+    public Map<Integer, Integer> collectRealProxy2WorkerEntityId(InetSocketAddress remoteAddress) {
+        return Collections.unmodifiableMap(this.worker2PlayerEntityIdCache.getOrDefault(remoteAddress, Map.of()));
     }
 
     public void autoCreateMapper(Player player) {
@@ -269,8 +275,18 @@ public class YsmMapperPayloadManager {
             this.disconnectMapperWithoutKickingMaster(mapperSession);
 
             final int workerEntityId = mapperSession.getPacketProxy().getPlayerWorkerEntityId();
-            if (workerEntityId != -1) {
-                this.worker2PlayerEntityIdCache.remove(workerEntityId);
+            final InetSocketAddress remoteAddress = mapperSession.getRemoteAddress();
+
+            if (workerEntityId != -1 && remoteAddress != null) {
+                final Map<Integer, Integer> workerMap = this.worker2PlayerEntityIdCache.get(remoteAddress);
+
+                if (workerMap != null) {
+                    workerMap.remove(workerEntityId);
+
+                    if (workerMap.isEmpty()) {
+                        this.worker2PlayerEntityIdCache.remove(remoteAddress);
+                    }
+                }
             }
         }
     }
